tests/extensions/structs/valid/fieldAccess2.wacc
# Output:
# 2
# a

begin
    struct sa is
        char a
        int b
    end
    sa obj = sa{'a', 2};
    println obj.b;
    println obj.a
end
